Move isys and booty into the pyanaconda/ directory, adjust paths to match.
This is required so the source layout and package layout have a similar enough
structure to make our test setup work.  Without this move, you can't run
"make check" or checkbot without getting error messages about no such module
pyanaconda.booty.

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = isys loader gptsync booty pyanaconda data \
+SUBDIRS = pyanaconda loader gptsync data \
 	  tests utils scripts docs po
 
 EXTRA_DIST = config.rpath COPYING \
