--- a/tests/kickstart_test/Makefile.am
+++ b/tests/kickstart_test/Makefile.am
@@ -21,6 +21,7 @@ EXTRA_DIST = *.py
 
 MAINTAINERCLEANFILES = Makefile.in
 
-TESTS_ENVIRONMENT = PYTHONPATH=$(top_builddir)/tests:$(top_builddir)/isys/.libs:$(top_builddir)/pyanaconda:$(top_builddir)
+ANACDIR = $(top_builddir)/pyanaconda
+TESTS_ENVIRONMENT = PYTHONPATH=$(top_builddir)/tests:$(ANACDIR)/isys/.libs:$(ANACDIR):$(top_builddir)
 
 TESTS = commands_test.py
