--- a/loader/Makefile.am
+++ b/loader/Makefile.am
@@ -54,11 +54,12 @@ loader_SOURCES     = loader.c copy.c moduleinfo.c loadermisc.c \
                      getparts.c dirbrowser.c fwloader.c ibft.c hardware.c \
                      method.c cdinstall.c hdinstall.c nfsinstall.c \
                      urlinstall.c net.c urls.c telnet.c telnetd.c \
-                     rpmextract.c
+                     rpmextract.c readvars.c
 
 init_CFLAGS        = $(COMMON_CFLAGS) $(GLIB_CFLAGS)
 init_LDADD         = $(GLIB_LIBS) $(top_srcdir)/pyanaconda/isys/libisys.la
-init_SOURCES       = init.c undomounts.c shutdown.c copy.c modules.c
+init_SOURCES       = init.c undomounts.c shutdown.c copy.c modules.c \
+                     readvars.c
 
 shutdown_CFLAGS    = $(COMMON_CFLAGS) -DAS_SHUTDOWN=1
 shutdown_SOURCES   = shutdown.c undomounts.c
