Revert "Add "askmethod" as a default argument."
This reverts commit 0e17308f80d1dc4739a52548e7df48bd5a742ab8.

Related: rhbz#611154

--- a/bootdisk/i386/grub.conf
+++ b/bootdisk/i386/grub.conf
@@ -4,5 +4,5 @@ splashimage=@SPLASHPATH@
 timeout 5
 hiddenmenu
 title @PRODUCT@ @VERSION@
-	kernel @KERNELPATH@ askmethod
+	kernel @KERNELPATH@
 	initrd @INITRDPATH@
