--- a/bootdisk/x86_64/grub.conf
+++ b/bootdisk/x86_64/grub.conf
@@ -3,8 +3,8 @@ default=0
 splashimage=@SPLASHPATH@
 timeout 5
 hiddenmenu
-title Install or upgrade an existing system
-	kernel @KERNELPATH@ askmethod
+title @PRODUCT@ @VERSION@
+	kernel @KERNELPATH@
 	initrd @INITRDPATH@
 title Install system with basic video driver
 	kernel @KERNELPATH@ xdriver=vesa nomodeset askmethod
