--- a/bootdisk/x86_64/syslinux.cfg
+++ b/bootdisk/x86_64/syslinux.cfg
@@ -19,15 +19,15 @@ label linux
   menu label ^Install or upgrade an existing system
   menu default
   kernel vmlinuz
-  append initrd=initrd.img askmethod
+  append initrd=initrd.img
 label vesa
   menu label Install system with ^basic video driver
   kernel vmlinuz
-  append initrd=initrd.img xdriver=vesa nomodeset askmethod
+  append initrd=initrd.img xdriver=vesa nomodeset
 label rescue
   menu label ^Rescue installed system
   kernel vmlinuz
-  append initrd=initrd.img rescue askmethod
+  append initrd=initrd.img rescue
 label local
   menu label Boot from ^local drive
   localboot 0xffff
