--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,10 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Thu Jul 29 2010 David Cantrell <dcantrell@redhat.com> - 13.21.64-1
+- Add missing parameter (rvykydal)
+  Resolves: rhbz#619269
+
 * Wed Jul 28 2010 David Cantrell <dcantrell@redhat.com> - 13.21.63-1
 - DEBUG -> DEBUGLVL (dcantrell)
   Related: rhbz#611154
