--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,10 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Fri Jul 30 2010 Chris Lumens <clumens@redhat.com> - 13.21.66-1
+- fix typo in 7c540b2cd19db3e098e768f88ac8a42272b22e06 (akozumpl)
+  Resolves: rhbz#619659
+
 * Thu Jul 29 2010 David Cantrell <dcantrell@redhat.com> - 13.21.65-1
 - Fix quoting that was causing boot.iso to not be made (dgregor).
   Resolves: rhbz#619279
