Fix test environment python path.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,6 +22,6 @@ SUBDIRS = mock kickstart_test storage_test regex
 MAINTAINERCLEANFILES = Makefile.in
 
 ANACDIR = $(top_builddir)/pyanaconda
-TESTS_ENVIRONMENT = PATH=/sbin:/usr/sbin:$$PATH PYTHONPATH=$(top_builddir)/tests:$(ANACDIR)/isys/.libs:$(ANACDIR)/isys:$(ANACDIR)
+TESTS_ENVIRONMENT = PATH=/sbin:/usr/sbin:$$PATH PYTHONPATH=$(top_builddir)/tests:$(ANACDIR)/isys/.libs:$(ANACDIR)/isys:$(top_builddir)
 
 TESTS = fw_test.py tsort_test.py
