--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,15 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Thu Aug 05 2010 David Cantrell <david.l.cantrell@gmail.com> - 13.21.69-1
+- Use part instead of device in PartitionWindow.populate() (dcantrell)
+  Resolves: rhbz#575749
+- Display the method selection details dialog on boot.iso (clumens).
+  Resolves: rhbz#620746
+- mpath: add MultipathDevices first, before their partitions. (akozumpl)
+  Related: rhbz#595866
+  Resolves: rhbz#615987
+
 * Wed Aug 04 2010 David Cantrell <dcantrell@redhat.com> - 13.21.68-1
 - Fix typo and set mpaths' sysfs path before querying udevdb. (dlehman)
   Resolves: rhbz#620712
