--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,14 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Thu Aug 12 2010 David Cantrell <dcantrell@redhat.com> - 13.21.75-1
+- Fix "Cancel" in stage 2 network enablement dialog (rvykydal)
+  Resolves: rhbz#623151
+- Proper detection of successful module update (msivak)
+  Resolves: rhbz#618862
+- We checked for updated driver with wrong path prefix (msivak)
+  Resolves: rhbz#619745
+
 * Wed Aug 11 2010 David Cantrell <dcantrell@redhat.com> - 13.21.74-1
 - LVM and LUKS now align everything to 1MB boundaries. (dlehman)
   Resolves: rhbz#623458
