--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,12 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Tue Aug 24 2010 David Cantrell <dcantrell@redhat.com> - 13.21.80-1
+- mpath: filter member partitions wiser in lvm. (akozumpl)
+  Related: rhbz#624175
+- mpath: do not deactivate mpath partitions in teardown(). (akozumpl)
+  Related: rhbz#624175
+
 * Thu Aug 19 2010 David Cantrell <dcantrell@redhat.com> - 13.21.79-1
 - lvm: filter 'sda[0-9]*' when filtering 'sda' (akozumpl)
   Resolves: rhbz#624175
